--- a/Kojima-Name-Generator-App/View/Base.lproj/Main.storyboard
+++ b/Kojima-Name-Generator-App/View/Base.lproj/Main.storyboard
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097.3" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -34,34 +35,45 @@
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DLs-Bp-SG5" userLabel="AnswerView">
-                                <rect key="frame" x="70" y="414" width="274" height="70"/>
+                                <rect key="frame" x="50" y="414" width="314" height="70"/>
                                 <subviews>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Answer goes here" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="OGd-z1-iSq">
-                                        <rect key="frame" x="0.0" y="0.0" width="274" height="70"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="314" height="70"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits"/>
+                                        <textInputTraits key="textInputTraits" returnKeyType="go"/>
                                     </textField>
                                     <pickerView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="mV3-lf-PLT">
-                                        <rect key="frame" x="-23" y="-73" width="320" height="216"/>
+                                        <rect key="frame" x="-23" y="-73" width="360" height="216"/>
                                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                     </pickerView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="RNG goes here" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OU5-Qr-UXl" userLabel="RNG Label">
+                                        <rect key="frame" x="5" y="5" width="304" height="60"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
                                 </subviews>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="OU5-Qr-UXl" secondAttribute="trailing" constant="5" id="7Ye-K7-pBq"/>
                                     <constraint firstItem="OGd-z1-iSq" firstAttribute="top" secondItem="DLs-Bp-SG5" secondAttribute="top" id="LFm-Ks-hG5"/>
+                                    <constraint firstItem="OU5-Qr-UXl" firstAttribute="top" secondItem="DLs-Bp-SG5" secondAttribute="top" constant="5" id="Lvo-1m-265"/>
+                                    <constraint firstItem="OU5-Qr-UXl" firstAttribute="left" secondItem="DLs-Bp-SG5" secondAttribute="left" constant="5" id="b4b-X1-pZe"/>
                                     <constraint firstAttribute="trailing" secondItem="OGd-z1-iSq" secondAttribute="trailing" id="eVg-6V-jsf"/>
                                     <constraint firstAttribute="bottom" secondItem="OGd-z1-iSq" secondAttribute="bottom" id="iih-fX-64m"/>
                                     <constraint firstItem="OGd-z1-iSq" firstAttribute="leading" secondItem="DLs-Bp-SG5" secondAttribute="leading" id="xnb-xA-CPg"/>
+                                    <constraint firstAttribute="bottom" secondItem="OU5-Qr-UXl" secondAttribute="bottom" constant="5" id="xzW-FC-XQf"/>
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kJS-ry-FAu" userLabel="ButtonView">
                                 <rect key="frame" x="70" y="694" width="274" height="68"/>
                                 <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="249" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageSizeForAccessibilityContentSizeCategory="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TPK-Hh-77S">
+                                    <button opaque="NO" contentMode="scaleAspectFit" verticalHuggingPriority="249" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageSizeForAccessibilityContentSizeCategory="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TPK-Hh-77S">
                                         <rect key="frame" x="120" y="20" width="34" height="28"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                                        <color key="tintColor" red="0.091909416019999995" green="0.21173426510000001" blue="0.22800827030000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <color key="tintColor" name="buttonColors"/>
                                         <state key="normal" image="checkmark.rectangle.fill" catalog="system">
+                                            <color key="titleColor" name="buttonColors"/>
                                             <preferredSymbolConfiguration key="preferredSymbolConfiguration" configurationType="pointSize" pointSize="30"/>
                                         </state>
                                         <connections>
@@ -115,18 +127,22 @@
                             <constraint firstItem="yPM-wl-FEl" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="45" id="OuG-85-P5k"/>
                             <constraint firstItem="xdG-8G-1EG" firstAttribute="top" secondItem="kJS-ry-FAu" secondAttribute="bottom" id="PWO-O3-tIh"/>
                             <constraint firstItem="kJS-ry-FAu" firstAttribute="top" secondItem="DLs-Bp-SG5" secondAttribute="bottom" constant="210" id="VvS-9w-Nky"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="DLs-Bp-SG5" secondAttribute="trailing" constant="70" id="ePn-rE-h0N"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="DLs-Bp-SG5" secondAttribute="trailing" constant="50" id="ePn-rE-h0N"/>
                             <constraint firstItem="yPM-wl-FEl" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="60" id="feb-bV-hno"/>
-                            <constraint firstItem="DLs-Bp-SG5" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="70" id="kY7-3M-uJS"/>
+                            <constraint firstItem="DLs-Bp-SG5" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="50" id="kY7-3M-uJS"/>
                             <constraint firstItem="xdG-8G-1EG" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="q4n-kO-ekT"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
+                        <outlet property="RNGLabel" destination="OU5-Qr-UXl" id="rDU-Tf-g7i"/>
                         <outlet property="answerField" destination="OGd-z1-iSq" id="req-JA-M7X"/>
+                        <outlet property="continueButton" destination="TPK-Hh-77S" id="dys-ZC-Z7h"/>
+                        <outlet property="leftButtonConstraint" destination="fEN-za-q7I" id="KkM-Iu-2ze"/>
                         <outlet property="pickerView" destination="mV3-lf-PLT" id="g8F-cC-tb8"/>
                         <outlet property="progressBar" destination="wOm-YN-CKN" id="q9e-48-R4r"/>
                         <outlet property="questionLabel" destination="WhM-Ow-zks" id="1kp-f1-kth"/>
+                        <outlet property="rightButtonConstraint" destination="fQi-Yr-kQN" id="DPg-GB-bxv"/>
                         <outlet property="snakeBox" destination="uC4-zl-lNU" id="bcO-3S-F2A"/>
                     </connections>
                 </viewController>
@@ -138,5 +154,8 @@
     <resources>
         <image name="MGS_snakebox" width="489" height="283"/>
         <image name="checkmark.rectangle.fill" catalog="system" width="128" height="93"/>
+        <namedColor name="buttonColors">
+            <color red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
     </resources>
 </document>
